--- a/src/App.css
+++ b/src/App.css
@@ -145,3 +145,22 @@
   border: white solid;
   padding: 20px;
 }
+
+.input--button {
+  margin-left: 20px;
+  width: 300px;
+  height: 30px;
+  border-radius: 10px;
+  font-size: 15px;
+}
+
+.input--field {
+  width: 300px;
+  height: 20px;
+  font-size: 15px;
+  border-radius: 3px;
+}
+
+.WelcomeBanner {
+  margin-bottom: 50px;
+}
